fix: auto orientation on mobile

--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -287,11 +287,7 @@ a {
   }
 
   .art-control-pip,
-  .art-control-fullscreenWeb,
-  .art-control-syncControl,
-  .art-control-hls-quality,
-  .art-control-dash-quality,
-  .art-control-subtitle {
+  .art-control-fullscreenWeb {
     display: none !important;
   }
 }
